--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -301,6 +301,7 @@
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
     <h1>Happy Coding</h1>
+    <P>I can do it.</P>
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
     </a>
